--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,13 @@
-
 .mainTitle h2 {
   margin-top: 10px;
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .mainTitle h4 {
-  margin-top: 0;
-}
+  margin-top: 0; }
 
 .main img {
   width: 100%;
-  height: 100%;
-}
+  height: 100%; }
 
 .main .featureTitle {
   background-color: #fff;
@@ -20,47 +16,37 @@
   width: auto;
   padding: 10px 12px 10px 22px;
   text-decoration: none;
-  color: black;
-}
+  color: black; }
 
 .side1 {
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 .side1 p {
   width: auto;
-  color: black;
-}
+  color: black; }
 
 .side1 h3, .side1 h2 {
-  display: none;
-}
+  display: none; }
 
 .side2 p {
   font-family: "Times New Roman";
   width: auto;
   padding: 0 12px 0 22px;
-  color: black;
-}
+  color: black; }
 
 .side2 img {
-  display: none;
-}
+  display: none; }
 
 .side1, .side2 {
   display: block;
   width: 100%;
   background-color: #fff;
-  padding: 3px 12px 3px 22px;
-}
+  padding: 3px 12px 3px 22px; }
 
-@media only screen and (min-width: 600px),
-       only screen and (min-width: 350px) and (orientation: landscape) {
-
+@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
   body {
     width: 100%;
-    padding: 0;
-  }
+    padding: 0; }
 
   nav {
     position: absolute;
@@ -69,100 +55,80 @@
     opacity: .95;
     position: fixed;
     margin-top: 50px;
-    margin-left: 50px;
-  }
+    margin-left: 50px; }
 
   nav ul li {
-    display: block;
-  }
+    display: block; }
 
   nav ul a {
     font-size: 12px;
     display: block;
-    line-height: 19px;
-  }
+    line-height: 19px; }
 
   .mainTitle {
     position: absolute;
     left: 10vh;
-    bottom: 40%;
-  }
+    bottom: 40%; }
 
   .main {
-    border-bottom: 10px solid #fff;
-  }
+    border-bottom: 10px solid #fff; }
 
   .main .featureTitle {
-    display: none;
-  }
+    display: none; }
 
   .side1 {
     padding-top: 4em;
-    padding-bottom: 6em;
-  }
+    padding-bottom: 6em; }
 
   .side1 p {
-   display: none;
-  }
+    display: none; }
 
   .side1 h2 {
-    font-size: 30px;
-  }
+    font-size: 30px; }
 
-    .side1 h3, .side1 h2 {
-     display: block;
-     color: #fff;
-     text-align: center;
-     font-family: "minion-pro"
-   }
+  .side1 h3, .side1 h2 {
+    display: block;
+    color: #fff;
+    text-align: center;
+    font-family: "minion-pro"; }
 
   .side2 {
     padding-top: 2em;
-   border-left: 10px solid #fff;
-  }
+    border-left: 10px solid #fff; }
 
   .side2 img {
-   display: block;
- }
+    display: block; }
 
   .side2 p {
-    color: #fff;
-  }
+    color: #fff; }
 
- .side1, .side2 {
-   background-color: black;
-   width: 48%;
-   height: 50vh;
-   float: left;
- }
-}
-
+  .side1, .side2 {
+    background-color: black;
+    width: 48%;
+    height: 50vh;
+    float: left; } }
 @media only screen and (min-width: 1140px) {
-
   body {
-    height: 100vh;
-  }
+    height: 100vh; }
 
   .mainTitle {
-    bottom: 10vh;
-  }
+    bottom: 10vh; }
+
   .main {
     float: left;
     width: 73%;
-    height:100%;
+    height: 100%;
     border-bottom: 0;
-    border-right: 10px solid #fff;
-  }
+    border-right: 10px solid #fff; }
 
   .side2 {
     border-left: 0;
-    border-top: 10px solid #fff;
-  }
+    border-top: 10px solid #fff; }
 
   .side1, .side2 {
     float: left;
     margin: 0 auto;
     width: 27%;
-    height: auto;
-  }
-}
+    height: auto; } }
+
+/*# sourceMappingURL=styles.css.map */
