--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,6 +6,8 @@
  * Set up a decent box model on the root element
  */
 html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -17,7 +19,7 @@ html {
  */
 *, *::before, *::after {
   box-sizing: inherit;
-} 
+}
 
 /**
  * Basic styles for links
@@ -29,5 +31,45 @@ a {
   @include on-event {
     color: $text-color;
     text-decoration: underline;
+  }
+}
+
+body {
+  font-family: $primary-font-family;
+  background-color: $primary-background-color;
+  margin: $margin-auto-center;
+  width: 90%;
+  color: $primary-text-color;
+  padding-top: 1.5em;
+}
+
+nav {
+  background-color: #fffeff;
+  height: auto;
+  width: auto;
+  margin: 0;
+  padding: 0.5rem 0.5rem 0 0.5rem;
+  h1 {
+      margin:  0;
+      a {
+        font-size: 15px;
+        text-decoration: none;
+        color: black;
+      }
+  }
+  ul {
+    list-style: none;
+    background-color: #f2f2f2;
+    padding: 0.5rem 0.5rem 0.5rem 0;
+    li {
+      display: inline-block;
+      margin-right: 2%;
+      a {
+        color: #999999;
+        font-size: 10px;
+        text-decoration: none;
+        color: black;
+      }
+    }
   }
 }
