--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,3 +1,12 @@
 // -----------------------------------------------------------------------------
 // This file contains all @font-face declarations, if any.
 // -----------------------------------------------------------------------------
+@font-face {
+  font-family: 'minion-pro';
+  src: url("Minion Pro.ttf");
+}
+
+@font-face {
+  font-family: 'HelveticaNeue';
+  src: url("HelveticaNeueLTPro-BdOu.otf");
+}
