--- a/css/main.css
+++ b/css/main.css
@@ -438,31 +438,50 @@ body {
   width: 90%;
   color: #ffffff;
   padding-top: 1.5em; }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    body {
+      width: 100%;
+      padding: 0; } }
+  @media only screen and (min-width: 1140px) {
+    body {
+      height: 100vh; } }
 
 nav {
   background-color: #fffeff;
   height: auto;
   width: auto;
-  margin: 0;
   padding: 0.5rem 0.5rem 0 0.5rem; }
-  nav h1 {
-    margin: 0; }
-    nav h1 a {
-      font-size: 15px;
-      text-decoration: none;
-      color: black; }
+  nav h1 a {
+    font-size: 15px;
+    color: #222222; }
   nav ul {
     list-style: none;
-    background-color: #f2f2f2;
-    padding: 0.5rem 0.5rem 0.5rem 0; }
+    background-color: #ededed;
+    padding: 0.5rem 0.5rem 0 0.5rem; }
     nav ul li {
       display: inline-block;
       margin-right: 2%; }
+      @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+        nav ul li {
+          display: block; } }
       nav ul li a {
         color: #999999;
         font-size: 10px;
-        text-decoration: none;
-        color: black; }
+        color: #222222; }
+        @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+          nav ul li a {
+            font-size: 12px;
+            display: block;
+            line-height: 19px; } }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    nav {
+      position: absolute;
+      width: 170px;
+      height: 170px;
+      opacity: .95;
+      position: fixed;
+      margin-top: 50px;
+      margin-left: 50px; } }
 
 @font-face {
   font-family: 'minion-pro';
@@ -531,5 +550,132 @@ body {
   padding: 0;
   position: absolute;
   width: 1px; }
+
+@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  .mainTitle {
+    position: absolute;
+    left: 10vh;
+    bottom: 40%; } }
+.mainTitle h2 {
+  margin-top: 10px;
+  margin-bottom: 0; }
+.mainTitle h4 {
+  margin-top: 0; }
+
+.main {
+  background-color: #ffffff;
+  display: block;
+  margin-bottom: 20px;
+  width: auto;
+  padding: 10px 12px 10px 22px;
+  text-decoration: none;
+  color: #222222; }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    .main {
+      border-bottom: 10px solid #ffffff;
+      display: none; } }
+  .main img {
+    width: 100%;
+    height: 100%; }
+
+.featureTitle {
+  background-color: #ffffff;
+  display: block;
+  margin-bottom: 20px;
+  width: auto;
+  padding: 10px 12px 10px 22px;
+  text-decoration: none;
+  color: #222222; }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    .featureTitle {
+      display: none; } }
+
+.side1 {
+  margin-bottom: 20px;
+  display: block;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 3px 12px 3px 22px; }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    .side1 {
+      padding-top: 4em;
+      padding-bottom: 6em;
+      background-color: black;
+      width: 48%;
+      height: 50vh;
+      float: left; } }
+  .side1 p {
+    width: auto;
+    color: #222222; }
+    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+      .side1 p {
+        display: none; } }
+  .side1 h2 {
+    display: none; }
+    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+      .side1 h2 {
+        font-size: 30px;
+        display: block;
+        color: #fff;
+        text-align: center;
+        font-family: "minion-pro"; } }
+  .side1 h3 {
+    display: none; }
+    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+      .side1 h3 {
+        display: block;
+        color: #fff;
+        text-align: center;
+        font-family: "minion-pro"; } }
+
+.side2 {
+  display: block;
+  width: 100%;
+  background-color: #ffffff;
+  padding: 3px 12px 3px 22px; }
+  .side2 p {
+    font-family: "Times New Roman";
+    width: auto;
+    padding: 0 12px 0 22px;
+    color: black; }
+  .side2 img {
+    display: none; }
+
+@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  .side2 {
+    padding-top: 2em;
+    border-left: 10px solid #fff; }
+
+  .side2 img {
+    display: block; }
+
+  .side2 p {
+    color: #fff; }
+
+  .side2 {
+    background-color: black;
+    width: 48%;
+    height: 50vh;
+    float: left; } }
+@media only screen and (min-width: 1140px) {
+  .mainTitle {
+    bottom: 10vh; }
+
+  .main {
+    float: left;
+    width: 73%;
+    height: 100%;
+    border-bottom: 0;
+    border-right: 10px solid #fff; }
+
+  .side2 {
+    border-left: 0;
+    border-top: 10px solid #fff; }
+
+  .side1, .side2 {
+    float: left;
+    margin: 0 auto;
+    width: 27%;
+    height: auto; } }
 
 /*# sourceMappingURL=main.css.map */
