add refactored page

--- a/css/main.css
+++ b/css/main.css
@@ -551,51 +551,59 @@ body {
   position: absolute;
   width: 1px; }
 
+.mainTitle h2 {
+  margin-top: 10px;
+  margin-bottom: 0;
+  color: #ffffff; }
+.mainTitle h4 {
+  margin-top: 0;
+  color: #ffffff; }
 @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
   .mainTitle {
     position: absolute;
     left: 10vh;
     bottom: 40%; } }
-.mainTitle h2 {
-  margin-top: 10px;
-  margin-bottom: 0; }
-.mainTitle h4 {
-  margin-top: 0; }
+@media only screen and (min-width: 1140px) {
+  .mainTitle {
+    bottom: 10vh; } }
 
-.main {
-  background-color: #ffffff;
+.main img {
+  width: 100%;
+  height: 100%; }
+.main .featureTitle {
+  background-color: #fff;
   display: block;
   margin-bottom: 20px;
   width: auto;
   padding: 10px 12px 10px 22px;
   text-decoration: none;
-  color: #222222; }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
-    .main {
-      border-bottom: 10px solid #ffffff;
+  color: black; }
+@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  .main {
+    border-bottom: 10px solid #fff; }
+    .main .featureTitle {
       display: none; } }
-  .main img {
-    width: 100%;
-    height: 100%; }
-
-.featureTitle {
-  background-color: #ffffff;
-  display: block;
-  margin-bottom: 20px;
-  width: auto;
-  padding: 10px 12px 10px 22px;
-  text-decoration: none;
-  color: #222222; }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
-    .featureTitle {
-      display: none; } }
+@media only screen and (min-width: 1140px) {
+  .main {
+    float: left;
+    width: 73%;
+    height: 100%;
+    border-bottom: 0;
+    border-right: 10px solid #fff; } }
 
 .side1 {
   margin-bottom: 20px;
   display: block;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 3px 12px 3px 22px; }
+  .side1 p {
+    width: auto;
+    color: black; }
+  .side1 h2 {
+    display: none; }
+  .side1 h3 {
+    display: none; }
   @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
     .side1 {
       padding-top: 4em;
@@ -603,35 +611,31 @@ body {
       background-color: black;
       width: 48%;
       height: 50vh;
-      float: left; } }
-  .side1 p {
-    width: auto;
-    color: #222222; }
-    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+      float: left; }
       .side1 p {
-        display: none; } }
-  .side1 h2 {
-    display: none; }
-    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+        display: none; }
       .side1 h2 {
         font-size: 30px;
         display: block;
         color: #fff;
         text-align: center;
-        font-family: "minion-pro"; } }
-  .side1 h3 {
-    display: none; }
-    @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+        font-family: "minion-pro"; }
       .side1 h3 {
         display: block;
         color: #fff;
         text-align: center;
         font-family: "minion-pro"; } }
+  @media only screen and (min-width: 1140px) {
+    .side1 {
+      float: left;
+      margin: 0 auto;
+      width: 27%;
+      height: auto; } }
 
 .side2 {
   display: block;
   width: 100%;
-  background-color: #ffffff;
+  background-color: #fff;
   padding: 3px 12px 3px 22px; }
   .side2 p {
     font-family: "Times New Roman";
@@ -640,42 +644,33 @@ body {
     color: black; }
   .side2 img {
     display: none; }
-
-@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
-  .side2 {
-    padding-top: 2em;
-    border-left: 10px solid #fff; }
-
-  .side2 img {
-    display: block; }
-
-  .side2 p {
-    color: #fff; }
-
-  .side2 {
-    background-color: black;
-    width: 48%;
-    height: 50vh;
-    float: left; } }
-@media only screen and (min-width: 1140px) {
-  .mainTitle {
-    bottom: 10vh; }
-
-  .main {
-    float: left;
-    width: 73%;
-    height: 100%;
-    border-bottom: 0;
-    border-right: 10px solid #fff; }
-
-  .side2 {
-    border-left: 0;
-    border-top: 10px solid #fff; }
-
-  .side1, .side2 {
-    float: left;
-    margin: 0 auto;
-    width: 27%;
-    height: auto; } }
+  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+    .side2 {
+      padding-top: 2em;
+      border-left: 10px solid #fff;
+      background-color: black;
+      width: 48%;
+      height: 50vh;
+      float: left; }
+      .side2 img {
+        display: block; }
+      .side2 p {
+        color: #fff; } }
+  @media only screen and (min-width: 1140px) {
+    .side2 {
+      border-left: 0;
+      border-top: 10px solid #fff;
+      float: left;
+      margin: 0 auto;
+      width: 27%;
+      height: auto; } }
+  @media only screen and (min-width: 1140px) {
+    .side2 {
+      border-left: 0;
+      border-top: 10px solid #fff;
+      float: left;
+      margin: 0 auto;
+      width: 27%;
+      height: auto; } }
 
 /*# sourceMappingURL=main.css.map */
