--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,52 +2,53 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 .mainTitle {
+  h2 {
+    margin-top: 10px;
+    margin-bottom: 0;
+    color: $white;
+  }
+  h4 {
+    margin-top: 0;
+    color: $white;
+  }
   @media only screen and (min-width: 600px),
          only screen and (min-width: 350px) and (orientation: landscape) {
     position: absolute;
     left: 10vh;
     bottom: 40%;
   }
-
-  h2 {
-    margin-top: 10px;
-    margin-bottom: 0;
-  }
-  h4 {
-    margin-top: 0;
+  @media only screen and (min-width: 1140px) {
+    bottom: 10vh;
   }
 }
-
+  
 .main {
-  background-color: $white;
-  display: block;
-  margin-bottom: 20px;
-  width: auto;
-  padding: 10px 12px 10px 22px;
-  text-decoration: none;
-  color: $black;
-  @media only screen and (min-width: 600px),
-         only screen and (min-width: 350px) and (orientation: landscape) {
-    border-bottom: 10px solid $white;
-    display: none;
-  }
   img {
     width: 100%;
     height: 100%;
   }
-}
-
-.featureTitle {
-  background-color: $white;
-  display: block;
-  margin-bottom: 20px;
-  width: auto;
-  padding: 10px 12px 10px 22px;
-  text-decoration: none;
-  color: $black;
+  .featureTitle {
+    background-color: #fff;
+    display: block;
+    margin-bottom: 20px;
+    width: auto;
+    padding: 10px 12px 10px 22px;
+    text-decoration: none;
+    color: black;
+  }
   @media only screen and (min-width: 600px),
          only screen and (min-width: 350px) and (orientation: landscape) {
+    border-bottom: 10px solid #fff;
+    .featureTitle {
     display: none;
+    }
+  }
+  @media only screen and (min-width: 1140px) {
+    float: left;
+    width: 73%;
+    height:100%;
+    border-bottom: 0;
+    border-right: 10px solid #fff;
   }
 }
 
@@ -55,8 +56,18 @@
   margin-bottom: 20px;
   display: block;
   width: 100%;
-  background-color: $white;
+  background-color: #fff;
   padding: 3px 12px 3px 22px;
+  p {
+    width: auto;
+    color: black;
+  }
+  h2 {
+    display: none;
+  }
+  h3 {
+    display: none;
+  }
   @media only screen and (min-width: 600px),
          only screen and (min-width: 350px) and (orientation: landscape) {
     padding-top: 4em;
@@ -65,43 +76,36 @@
     width: 48%;
     height: 50vh;
     float: left;
-  }
-  p {
-    width: auto;
-    color: $black;
-    @media only screen and (min-width: 600px),
-           only screen and (min-width: 350px) and (orientation: landscape) {
+    p {
       display: none;
     }
-  }
-  h2 {
-    display: none;
-    @media only screen and (min-width: 600px),
-           only screen and (min-width: 350px) and (orientation: landscape) {
+    h2 {
       font-size: 30px;
       display: block;
       color: #fff;
       text-align: center;
-      font-family: "minion-pro"
+      font-family: "minion-pro"    
     }
-  }
-  h3 {
-    display: none;
-    @media only screen and (min-width: 600px),
-           only screen and (min-width: 350px) and (orientation: landscape) {
+    h3 {
       display: block;
       color: #fff;
       text-align: center;
       font-family: "minion-pro"
     }
+  }
+  @media only screen and (min-width: 1140px) {
+    float: left;
+    margin: 0 auto;
+    width: 27%;
+    height: auto;
   }
 }
 
 .side2 {
   display: block;
   width: 100%;
-  background-color: $white;
-  padding: 3px 12px 3px 22px;
+  background-color: #fff;
+  padding: 3px 12px 3px 22px;  
   p {
     font-family: "Times New Roman";
     width: auto;
@@ -111,50 +115,32 @@
   img {
     display: none;
   }
-}
-
-@media only screen and (min-width: 600px),
-       only screen and (min-width: 350px) and (orientation: landscape) {
-  .side2 {
+  @media only screen and (min-width: 600px),
+        only screen and (min-width: 350px) and (orientation: landscape) {
     padding-top: 2em;
-   border-left: 10px solid #fff;
-  }
-
-  .side2 img {
-   display: block;
- }
-
-  .side2 p {
-    color: #fff;
-  }
-
- .side2 {
-   background-color: black;
-   width: 48%;
-   height: 50vh;
-   float: left;
- }
-}
-
-@media only screen and (min-width: 1140px) {
-
-  .mainTitle {
-    bottom: 10vh;
-  }
-  .main {
+    border-left: 10px solid #fff;
+    background-color: black;
+    width: 48%;
+    height: 50vh;
     float: left;
-    width: 73%;
-    height:100%;
-    border-bottom: 0;
-    border-right: 10px solid #fff;
+    img {
+      display: block;
+    }
+    p {
+      color: #fff;
+    }
   }
-
-  .side2 {
+  @media only screen and (min-width: 1140px) {
     border-left: 0;
     border-top: 10px solid #fff;
+    float: left;
+    margin: 0 auto;
+    width: 27%;
+    height: auto;
   }
-
-  .side1, .side2 {
+  @media only screen and (min-width: 1140px) {
+    border-left: 0;
+    border-top: 10px solid #fff;
     float: left;
     margin: 0 auto;
     width: 27%;
