--- a/css/main.css
+++ b/css/main.css
@@ -438,11 +438,11 @@ body {
   width: 90%;
   color: #ffffff;
   padding-top: 1.5em; }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  @media (min-width: 600px) {
     body {
       width: 100%;
       padding: 0; } }
-  @media only screen and (min-width: 1140px) {
+  @media (min-width: 1140px) {
     body {
       height: 100vh; } }
 
@@ -461,19 +461,19 @@ nav {
     nav ul li {
       display: inline-block;
       margin-right: 2%; }
-      @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+      @media (min-width: 600px) {
         nav ul li {
           display: block; } }
       nav ul li a {
         color: #999999;
         font-size: 10px;
         color: #222222; }
-        @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+        @media (min-width: 600px) {
           nav ul li a {
             font-size: 12px;
             display: block;
             line-height: 19px; } }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  @media (min-width: 600px) {
     nav {
       position: absolute;
       width: 170px;
@@ -558,12 +558,12 @@ body {
 .mainTitle h4 {
   margin-top: 0;
   color: #ffffff; }
-@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+@media (min-width: 600px) {
   .mainTitle {
     position: absolute;
     left: 10vh;
     bottom: 40%; } }
-@media only screen and (min-width: 1140px) {
+@media (min-width: 1140px) {
   .mainTitle {
     bottom: 10vh; } }
 
@@ -578,12 +578,12 @@ body {
   padding: 10px 12px 10px 22px;
   text-decoration: none;
   color: black; }
-@media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+@media (min-width: 600px) {
   .main {
     border-bottom: 10px solid #fff; }
     .main .featureTitle {
       display: none; } }
-@media only screen and (min-width: 1140px) {
+@media (min-width: 1140px) {
   .main {
     float: left;
     width: 73%;
@@ -604,7 +604,7 @@ body {
     display: none; }
   .side1 h3 {
     display: none; }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  @media (min-width: 600px) {
     .side1 {
       padding-top: 4em;
       padding-bottom: 6em;
@@ -625,7 +625,7 @@ body {
         color: #fff;
         text-align: center;
         font-family: "minion-pro"; } }
-  @media only screen and (min-width: 1140px) {
+  @media (min-width: 1140px) {
     .side1 {
       float: left;
       margin: 0 auto;
@@ -644,7 +644,7 @@ body {
     color: black; }
   .side2 img {
     display: none; }
-  @media only screen and (min-width: 600px), only screen and (min-width: 350px) and (orientation: landscape) {
+  @media (min-width: 600px) {
     .side2 {
       padding-top: 2em;
       border-left: 10px solid #fff;
@@ -656,15 +656,7 @@ body {
         display: block; }
       .side2 p {
         color: #fff; } }
-  @media only screen and (min-width: 1140px) {
-    .side2 {
-      border-left: 0;
-      border-top: 10px solid #fff;
-      float: left;
-      margin: 0 auto;
-      width: 27%;
-      height: auto; } }
-  @media only screen and (min-width: 1140px) {
+  @media (min-width: 1140px) {
     .side2 {
       border-left: 0;
       border-top: 10px solid #fff;
