--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -74,9 +74,9 @@ $max-width: 1180px !default;
 /// @prop {Map} values - Values are actual breakpoints expressed in pixels
 /// @see {mixin} respond-to
 $breakpoints: (
-  'small': (min-width: 320px),
-  'medium': (min-width: 768px),
-  'large': (min-width: 1024px),
+  'small': (320px),
+  'medium': (600px),
+  'large': (1140px),
 ) !default;
 
 
